# pyqt-synth

./: README.md  gui.py  pyproject.toml  readme.md  real_time_audio.py  requirements.txt  syntetizer.py  synthesizer.py
